src/objects/Assignment_Rule__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fire_On_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Mark this as true to reassign owner for existing records.</inlineHelpText>
        <label>Fire On Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Object__c</fullName>
        <label>Related Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Assignment Rule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Assignment Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assignment Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>